# geokrige

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  quickstart.md  reference.md
src/geokrige/: __init__.py  autocorrelation.py  data.py  export.py  kriging.py  socrata.py  variogram.py
tests/: test_basic.py
