[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geokrige"
version = "0.1.0"
description = "Fetch, test, and krige spatial point data: Moran's I, variogram fitting, and Universal/Ordinary Kriging in one pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["geospatial", "kriging", "variogram", "morans-i", "spatial-statistics", "interpolation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "geopandas",
    "shapely",
    "pykrige",
    "scikit-learn",
    "requests",
]

[project.optional-dependencies]
export = ["folium", "rasterio"]

[project.urls]
Homepage = "https://github.com/yourusername/geokrige"
Documentation = "https://geokrige.readthedocs.io"
Issues = "https://github.com/yourusername/geokrige/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geokrige"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
